# marketdata

./: .gitignore  README.md  requirements.txt  setup.cfg
app/: __init__.py
app/database/: mongo_calculator.py  mongo_manager.py  mongodb.py
app/gui/: marketdata.py
app/import_csv/: import_csv.py
app/pdf/: reader.py
scripts/: drop_all_collections.py  load_all_csv.py  load_one_csv.py  main.py  read_pdf.py  stock_price_return.py
tests/: test_calculator.py  test_import_csv.py  test_load_csv.py  test_marketdata.py
